<resources>
    <string name="app_name">All-Study</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="teacher_id">Teacher ID</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="student_id">Student ID</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="email">Email</string>
    <string name="teacher_log_in">Teacher Log In</string>
    <string name="login">Login</string>
    <string name="forgot_passwords">Forgot password?</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="Sign_Up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="send">Send</string>
    <string name="teacher_sign_up">Teacher Sign Up</string>
    <string name="active_server">Active Server</string>
    <string name="join_now">Join Now</string>
    <string name="coding">Coding</string>
    <string name="more_active_servers">More Active Servers</string>
    <string name="list_of_servers">List of Servers</string>
    <string name="verification">Verification</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="resend">Resend</string>
    <string name="student_sign_in">Student Sign In</string>
    <string name="teacher_sign_in">Teacher Sign In</string>
    <string name="are_you_a">Are you a</string>
    <string name="back_button">Back Button</string>
    <string name="signup_box">Signup box</string>
    <string name="log_in">Log In</string>
    <string name="new_password">New Password</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="all_study_terms_conditions_message">By using AllStudy, you agree to the following terms and conditions. Please read them carefully\n\n" "Some features of the app requires you to create an account. You agree to provide accurate and complete information when creating an account\n\n" "Your privacy is important to us. Please review our Privacy Policy to understand how we collect, use and protect your personal information"</string>
    <string name="confirm">Confirm</string>
    <string name="allstudy">ALLSTUDY</string>
    <string name="description_squarestroke" />
    <string name="description_image" />
    <string name="description_bar" />
    <string name="description_avatar" />
    <string name="create_an_account">Create an account</string>
    <string name="student_sign_up">Student Sign Up</string>
    <string name="teacher_sign_upp">Teacher Sign Up</string>
    <string name="see_more">see more</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_conditions"><![CDATA[terms & conditions]]></string>
    <string name="student_log_in">Student Log In</string>
    <string name="navigate_to_previous_page">Navigate to previous page</string>
    <string name="computer_science">Computer Science</string>
    <string name="server_picture">Server Picture</string>
    <string name="user_profile">User Profile</string>
    <string name="task_bar">Task bar</string>
    <string name="all_study">ALLSTUDY</string>
    <string name="server_notification">server notification</string>
    <string name="join_button">Join Button</string>
    <string name="favorite_button">Favorite Button</string>
    <string name="create_server_button">Create server button</string>
    <string name="join_server_button">Join server button</string>
    <string name="full_name">Full Name</string>
    <string name="allstudy_terms_conditions"><![CDATA[AllStudy - Terms & conditions]]></string>
    <string name="agree_to_terms"><![CDATA[Please agree to the terms & condition first.]]></string>
    =======
    <string name="more_active_servers_description" />
    <string name="_0">0</string>
    <string name="information_technology">Information Technology</string>
    <string name="log_out">Log out</string>
    <string name="quantitative_analysis">Quantitative Analysis</string>
    <string name="usename">Username</string>
    <string name="about_me">About me</string>
    <string name="application_development">Application Development</string>
    <string name="see_activities">See Activities</string>
    <string name="see_classroom_rules">See classroom rules</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="activities">Activities:</string>
    <string name="due_this_month">• Due this month:</string>
    <string name="due_today">• Due Today:</string>
    <string name="classroom_rules">Classroom Rules:</string>
    <string name="no_eating_inside_class">• No eating inside class</string>
    <string name="more_than_10_minutes_is_absent">• More than 10 minutes is absent</string>
    <string name="strictly_no_copying">• Strictly no copying</string>
    <string name="see_participants">See participants</string>
    <string name="log_out_button">Log out Button</string>
    <string name="change_picture_button">Change picture button</string>
    <string name="create_server">Create Server:</string>
    <string name="name">Name:</string>
    <string name="password_">Password:</string>
    <string name="section">Section:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="enable_apps">Enable Apps</string>
    <string name="favorite_server">Favorite Server</string>
    <string name="servers">Servers</string>
    <string name="host">Host</string>
    <string name="bscs_3_1a">BSCS 3.1A</string>
    <string name="reignier_dahunog">Reignier Dahunog</string>
    <string name="camron_bernat">Camron Bernat</string>
    <string name="bscs_2_1a">BSCS 2.1A</string>
    <string name="upload_files">Upload Files</string>
    <string name="add_apps">Add apps</string>
    <string name="logout_button">Logout Button</string>
    <string name="notif_button_1">Notif button 1</string>
    <string name="notif_button_2">Notif Button 2</string>
    <string name="notif_button_3">Notif Button 3</string>
    <string name="notif_button_4">Notif Button 4</string>
    <string name="notif_button_5">Notif Button 5</string>
    <string name="bio">Bio</string>
    <string name="notification">NOTIFICATION</string>
    <string name="peter_griffin">Peter Griffin</string>
    <string name="scroll_horizontally_to_view_more_items">Scroll horizontally to view more items</string>
    <string name="intermediate_mobile_programming">Intermediate Mobile Programming</string>
    <string name="see_participants_click">See participants</string>
    =======
    >>>>>>> b7be4084048529bca1d59a87143de44761eda04e
    >>>>>>> 47b24891f1b51626e36c9d7d2cfc0891703c6617
    >>>>>>> 43b23a5ab3e207f99711620891eb868d73db0114
</resources>