<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Teacher_Create_Server_Page"
    android:background="#F0F5F9">

    <TextView
        android:id="@+id/all_study_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/all_study"
        android:textSize="40sp"
        android:fontFamily="@font/product_sans_bold"
        android:background="#F0F5F9"/>

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="55dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button"
        android:src="@drawable/back_button" />

    <ImageButton
        android:id="@+id/edit_profile_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:contentDescription="@string/user_profile"
        android:src="@drawable/edit_profile_button"
        android:background="#F0F5F9" />

    <TextView
        android:id="@+id/create_server_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_server"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edit_profile_button"
        android:textSize="23sp"
        android:layout_margin="28dp"
        android:fontFamily="@font/product_sans_bold" />

    <EditText
        android:id="@+id/server_name"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/name"
        android:layout_below="@+id/create_server_title"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_edit_text"
        android:textColorHint="#6A5E5E"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/product_sans_regular" />

    <EditText
        android:id="@+id/server_password"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/password_"
        android:layout_below="@+id/server_name"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_edit_text"
        android:textColorHint="#6A5E5E"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/product_sans_regular" />

    <EditText
        android:id="@+id/server_section"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/section"
        android:layout_below="@+id/server_password"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_edit_text"
        android:textColorHint="#6A5E5E"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:fontFamily="@font/product_sans_regular" />

    <EditText
        android:id="@+id/server_date"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/date"
        android:layout_below="@+id/server_section"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_edit_text"
        android:textColorHint="#6A5E5E"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:drawableEnd="@drawable/drop_down_menu"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/product_sans_regular" />

    <EditText
        android:id="@+id/server_time"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/time"
        android:layout_below="@+id/server_date"
        android:layout_centerHorizontal="true"
        android:background="@drawable/round_edit_text"
        android:textColorHint="#6A5E5E"
        android:padding="12dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:drawableEnd="@drawable/drop_down_menu"
        android:paddingStart="12dp"
        android:paddingEnd="16dp"
        android:fontFamily="@font/product_sans_regular" />

    <Button
        android:id="@+id/enable_apps"
        android:layout_width="175dp"
        android:layout_height="55dp"
        android:text="@string/enable_apps"
        android:layout_centerHorizontal="true"
        android:backgroundTint="@color/black"
        android:layout_below="@+id/server_time"
        android:layout_marginTop="25dp" />


</RelativeLayout>